[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://oldAssets/title_screen.png" type="Texture" id=2]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/fonts/Jersey M54.ttf"

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = SubResource( 3 )

[sub_resource type="GDScript" id=4]
script/source = "extends Node

func _ready():
	var music = AudioStreamPlayer.new()
	var stream = load(\"res://Assets/music/Pixelland.mp3\")
	music.set_stream(stream)
	music.volume_db = 1
	music.pitch_scale = 1
	music.play()
#	var stream = AudioStream.new()
#	var music_player = AudioStreamPlayer.new()
#	if File.new().file_exists(music_file):
#var music = load(music_file)
#		music_player.stream = music
#		music_player.play()

		# below are optional steps if you need more control
		
#		var music_bus_id = AudioServer.get_bus_count()
#		AudioServer.add_bus()
#		AudioServer.set_bus_name(music_bus_id,\"music\")
#		# connects music to master bus
#		AudioServer.set_bus_send(music_bus_id,\"Master\")
#
#		add_child(music_player)
#		music_player.bus = \"music\"
"

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 400, 300 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 34.0
margin_top = 435.0
margin_right = 234.0
margin_bottom = 586.0

[node name="playButton" type="Button" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )
text = "Play"

[node name="aboutUsButton" type="Button" parent="VBoxContainer"]
margin_top = 41.0
margin_right = 200.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 2 )
text = "ABOUT US"

[node name="quitButton" type="Button" parent="VBoxContainer"]
margin_top = 82.0
margin_right = 200.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 2 )
text = "QUIT"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true
script = SubResource( 4 )

[connection signal="pressed" from="VBoxContainer/playButton" to="." method="_on_playButton_pressed"]
[connection signal="pressed" from="VBoxContainer/aboutUsButton" to="." method="_on_aboutUsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/quitButton" to="." method="_on_quitButton_pressed"]
